k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
name: three-tier
labels:
pod-security.kubernetes.io/enforce: "restricted"
pod-security.kubernetes.io/warn: "restricted"
pod-security.kubernetes.io/audit: "restricted"
