k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/muhammadeissa390/tasks-app/tasks-app-backend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
