k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
       app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/muhammadeissa390/tasks-app/tasks-app-frontend
        ports:
        - containerPort: 80
          # no root filesystem write required
        securityContext:
          runAsNonRoot: true
